tests/NormalTests/paczka1/fuzzy1/20398637.err
Error in line 1: HZf0ad S52J 58,2
Error in line 22: HTe5o9Ctcn S674 18,1
Error in line 14: Ie9PsspvP S674 48,9
Error in line 24: A745 A745 107,0
Error in line 29: Ie9PsspvP S448 35,3
Error in line 33: HZf0ad S674 39,0
Error in line 31: A745 S674 66,4
Error in line 32: Ie9PsspvP A745 83,0
